--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,46 @@
 <resources>
     <string name="app_name">PowerfullCalculator</string>
+    <string name="_2_nd">2^nd</string>
+    <string name="pi">π</string>
+    <string name="e">e</string>
+    <string name="exp">exp</string>
+    <string name="ce">ce</string>
+    <string name="x_elevate">x^2</string>
+    <string name="_1_x">1/x</string>
+    <string name="abs_x">|x|</string>
+    <string name="mod">mod</string>
+    <string name="x_3">x^3</string>
+    <string name="paren_left">(</string>
+    <string name="paren_right">)</string>
+    <string name="fatorial">!</string>
+    <string name="div">/</string>
+    <string name="x_elevate_y">x^y</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="mult">x</string>
+    <string name="_10_x">10^x</string>
+    <string name="_4">4</string>
+    <string name="_5">5</string>
+    <string name="_6">6</string>
+    <string name="minus">-</string>
+    <string name="log">log</string>
+    <string name="_1">1</string>
+    <string name="_2">2</string>
+    <string name="_3">3</string>
+    <string name="plus">+</string>
+    <string name="ln">ln</string>
+    <string name="plus_minus">+/_</string>
+    <string name="cero">0</string>
+    <string name="point">.</string>
+    <string name="equal">=</string>
+    <string name="open_big_calculator"><![CDATA[<]]></string>
+    <string name="open_more_opt"><![CDATA[<]]></string>
+    <string name="inv">INV</string>
+    <string name="sin">Sin</string>
+    <string name="cos">cos</string>
+    <string name="sqrt">√</string>
+    <string name="btn_elevate">^</string>
+    <string name="deg">deg</string>
+    <string name="btn_percen">%</string>
 </resources>
